RESOLVED FIXED315599
_networkProcessIdentifier testing SPI crashes the UI process if the network process has crashed
https://bugs.webkit.org/show_bug.cgi?id=315599
Summary _networkProcessIdentifier testing SPI crashes the UI process if the network p...
Tim Horton
Reported 2026-05-26 13:46:28 PDT
_networkProcessIdentifier testing SPI crashes the UI process if the network process has crashed
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-26 13:46:35 PDT
Tim Horton
Comment 2 2026-05-26 13:50:04 PDT
EWS
Comment 3 2026-05-26 14:50:32 PDT
Committed 313919@main (2eb84fe63326): <https://commits.webkit.org/313919@main> Reviewed commits have been landed. Closing PR #65710 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.