_networkProcessIdentifier testing SPI crashes the UI process if the network process has crashed https://bugs.webkit.org/show_bug.cgi?id=315599 rdar://177979321

Reviewed by Abrar Rahman Protyasha and Wenson Hsieh.

* Source/WebKit/UIProcess/API/Cocoa/WKWebViewTesting.mm:
(-[WKWebView _networkProcessIdentifier]):
This SPI, which was added in 264382@main, is unlike all of its siblings.
Instead of returning 0 to represent "there is no such process", it RELEASE_ASSERTs
in the UI process. This makes it somewhat difficult to use in some testing scenarios.
Change it to behave like the variants for the web and GPU processes instead.

Canonical link: https://commits.webkit.org/313919@main